--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "better-sqlite3": "^7.6.2",
     "express": "^4.18.1",
     "knex": "^2.3.0",
     "sqlite3": "^5.1.1"
